<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--
=================================================================================
    Copyright (C) 2017 Usman H Hussain

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at:

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
=================================================================================
    -->

    <groupId>com.usmanhussain.cayenne</groupId>
    <artifactId>Cayenne</artifactId>
    <version>1.0</version>
    <name>com.usmanhussain.cayenne:Cayenne</name>
    <description>com.usmanhussain.cayenne - Cayenne is a set up project for any programme or project for getting started
        with test automation using Habanero.
        It allows you to have a fully working and ready to use Test Automation framework in a matter of minutes. The
        framework creates a project for the user using the Habanero project.
        The folder definition and set up utilise the framework, 'Habanero' which can be found here:
        https://github.com/usman-h/Habanero
    </description>
    <url>https://github.com/usman-h/Cayenne</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>
                Copyright (c) 2017 Usman H Hussain, All rights reserved.
            </comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Usman H Hussain</name>
            <email>usman-h@hotmail.co.uk</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/usman-h/Cayenne.git</connection>
        <developerConnection>scm:git:git@github.com:usman-h/Cayenne.git</developerConnection>
        <url>git://github.com/usman-h/Cayenne</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
            <!--<url>https://oss.sonatype.org/</url>-->
        </repository>
    </distributionManagement>

    <properties>
        <sonar.language>java</sonar.language>
        <custom.folder>config</custom.folder>
        <surefire.fork.count>2</surefire.fork.count>
        <features>src/test/resources/features</features>
        <testFailureIgnore>false</testFailureIgnore>
        <driverType>$driver</driverType>
        <generateHarReport>false</generateHarReport>
        <jenkinsStyleReports>true</jenkinsStyleReports>
        <chromeDriverPath>${basedir}\src\main\resources\drivers\chromedriver.exe</chromeDriverPath>
        <ieDriverPath>${basedir}\src\main\resources\drivers\IEDriverServer.exe</ieDriverPath>
        <geckoDriverPath>${basedir}\src\main\resources\drivers\geckodriver.exe</geckoDriverPath>
        <!--<phantomjsDriverPath>${basedir}\src\main\resources\drivers\phantomjs.exe</phantomjsDriverPath>-->
        <java.version>1.8</java.version>
        <hamcrest.version>1.3</hamcrest.version>
        <maven.compiler.version>3.3</maven.compiler.version>
        <maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
        <logback.version>1.1.7</logback.version>
        <cucumber.jvm.parallel.version>1.2.1</cucumber.jvm.parallel.version>
        <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
        <checkstyle.version>6.19</checkstyle.version>
        <acceptance.tests.in.parallel>2</acceptance.tests.in.parallel>
        <logLevel>WARN</logLevel>
    </properties>

    <profiles>
        <profile>
            <id>jenkins</id>
        </profile>

        <profile>
            <id>ENVIRONMENT ID GOES HERE!!!</id>
            <!-- Use these profiles to run tests against different environments -->
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>

        <profile>
            <id>reporting</id>
            <properties>
                <jenkinsStyleReports>true</jenkinsStyleReports>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>target/test-classes/com/dlg/saucecucumberjvm</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/test/resources</directory>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.github.temyers</groupId>
                <artifactId>cucumber-jvm-parallel-plugin</artifactId>
                <version>4.0.0</version>
                <executions>
                    <execution>
                        <id>generateRunners</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>generateRunners</goal>
                        </goals>
                        <configuration>
                            <!-- Mandatory -->
                            <!-- Comma separated list of package names to scan for glue code -->
                            <glue>
                                <package>com.usmanhussain.cayenne.step_definitions</package>
                                <package>com.usmanhussain.cayenne.hooks</package>
                            </glue>
                            <!-- These are the default values -->
                            <!-- Where to output the generated Junit tests -->
                            <outputDirectory>${project.build.directory}/generated-test-sources/features
                            </outputDirectory>
                            <!-- The diectory containing your feature files.  -->
                            <featuresDirectory>${features}</featuresDirectory>
                            <!-- Directory where the cucumber report files shall be written  -->
                            <cucumberOutputDir>${project.build.directory}/cucumber_reports/regression_results</cucumberOutputDir>
                            <!-- Comma separated list of output formats -->
                            <plugins>
                                <plugin>
                                    <name>json</name>
                                </plugin>
                                <plugin>
                                    <name>html</name>
                                </plugin>
                                <plugin>
                                    <name>junit</name>
                                </plugin>
                            </plugins>
                            <!-- CucumberOptions.strict property -->
                            <strict>true</strict>
                            <!-- CucumberOptions.monochrome property -->
                            <monochrome>true</monochrome>
                            <!-- The tags to run, maps to CucumberOptions.tags property -->
                            <namingScheme>pattern</namingScheme>
                            <!-- The class naming pattern to use. Only required/used if naming scheme is 'pattern'.-->
                            <namingPattern>{f}_Parallel{c}Test</namingPattern>
                            <!-- If set to true, only feature files containing the required tags shall be generated. -->
                            <!-- Excluded tags (~@notMe) are ignored. -->
                            <tags>
                                <tag>~@manual</tag>
                                <tag>~@wip</tag>
                            </tags>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>merge-cucumber-js-reports</id>
                        <phase>test</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <classpathScope>test</classpathScope>
                            <mainClass>com.usmanhussain.cayenne.JSONReportMerger</mainClass>
                            <arguments>
                                <argument>target/cucumber_reports/regression_results</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <phase>test</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <projectName>cucumber-jvm</projectName>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <forkCount>${surefire.fork.count}</forkCount>
                    <reuseForks>false</reuseForks>
                    <argLine>-Duser.language=en</argLine>
                    <argLine>-Xmx1024m</argLine>
                    <argLine>-XX:MaxPermSize=256m</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <useFile>false</useFile>
                    <includes>
                        <include>**/*Test.class</include>
                    </includes>
                    <systemPropertyVariables>
                        <driverType>${driverType}</driverType>
                        <generateHarReport>${generateHarReport}</generateHarReport>
                        <webdriver.chrome.driver>${chromeDriverPath}</webdriver.chrome.driver>
                        <webdriver.ie.driver>${ieDriverPath}</webdriver.ie.driver>
                        <webdriver.gecko.driver>${geckoDriverPath}</webdriver.gecko.driver>
                        <!--<webdriver.phantomjs.driver>${phantomjsDriverPath}</webdriver.phantomjs.driver>-->
                        <!--<phantomjs.binary.path>${phantomjsDriverPath}</phantomjs.binary.path>-->
                        <logLevel>${logLevel}</logLevel>
                        <jenkinsStyleReports>${jenkinsStyleReports}</jenkinsStyleReports>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <!--################################################-->
            <!--TO ONLY BE USED BY USMAN H HUSSAIN FOR DEPLOYING-->
            <!--################################################-->
            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-gpg-plugin</artifactId>-->
                <!--<version>1.5</version>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<id>sign-artifacts</id>-->
                        <!--<phase>verify</phase>-->
                        <!--<goals>-->
                            <!--<goal>sign</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->

        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.usmanhussain.habanero</groupId>
            <artifactId>Habanero</artifactId>
            <version>1.0.0</version>
        </dependency>
    </dependencies>
</project>
